[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nibe_serial"
authors = [{ name = "Per Rosengren", email = "per.rosengren@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["paho-mqtt ==1.6.1", "nibe ==0.4.0"]

[project.urls]
Source = "https://github.com/per42/nibe_serial"

[project.scripts]
nibe_serial = "nibe_serial:main"
